tests/fixtures/valid/advanced/types/bool_float_comparisons.py
# Test bool compared with float
print(True == 1.0)
print(False == 0.0)
print(True > 0.5)
print(False < 0.5)
print(True != 2.0)
print(False >= 0.0)
print(True <= 1.0)
