tests/fixtures/invalid/pow_float_bool_float.py
# Cannot call pow() with Float, Bool, Float
x = pow(1.0, True, 1.0)
